<resources>
    <string name="app_name">MoviesApp</string>
    <string name="title_label">Title</string>
    <string name="release_date_label">Release date</string>
    <string name="detail_image_content_description">Detail Image</string>
    <string name="content_description_movie_image">Movie Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title_hint">Movie title</string>
    <string name="movie_description_hint">Movie summary</string>
    <string name="add_movie_button_text">ADD MOVIE</string>
    <string name="mandatoryAddMovieMessage">Please fill all the fields</string>
    <string name="movie_summary_hint">Movie release date</string>
    <string name="movie_added">Movie Added</string>
    <string name="login_name_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="invalid_login_detail">Fill the username and password</string>
    <string name="logoutMenu">Logout</string>
</resources>