<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/movieDetailImageView"
        android:layout_width="@dimen/card_image_size"
        android:layout_height="@dimen/card_image_size"
        android:layout_gravity="center"
        android:contentDescription="@string/detail_image_content_description"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/padding_half"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/pokemonNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Bulbasaur"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_label" />

        <TextView
            android:id="@+id/pokemonWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_half"
            tools:text="10.0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_standard">

        <TextView
            android:id="@+id/pokemonHeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_label" />

        <TextView
            android:id="@+id/pokemonHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_half"
            tools:text="90.7" />
    </LinearLayout>

</LinearLayout>
